Consolidate duplicated endpoints and remove deprecated files
- Delete deprecated list_repository.dart (consolidated into ReadingListRepository)
- Deprecate UserStatsController and UserStatsService (consolidated into ReadingStatsController)
- Consolidate all streak endpoints to /api/reading-stats/streak
- All list endpoints already normalized to /api/lists
- Frontend uses canonical endpoints via ApiConstants

Changes:
- Removed: frontend/between_pages/lib/repositories/list_repository.dart
- Updated: ReadingListRepository is now canonical for all list operations
- Deprecated: UserStatsController with @deprecated annotation
- Deprecated: UserStatsService with @deprecated annotation
- Frontend continues using /api/reading-stats/streak and /api/lists endpoints